docs/book/samples/appa/seq_wrap_check.kso
main = print "steeping"
  >> print "serving"
